# advent-of-code-rust

./: .envrc  .gitignore  Cargo.toml  License.md  Makefile  README.md  build.nix  default.nix  run-aoc.bat  run-aoc.ps1  shell.nix
2024/day01/src/: lib.rs  main.rs
2024/day02/src/: lib.rs  main.rs
2024/day03/src/: lib.rs
2024/day04/src/: lib.rs  main.rs
2024/day05/: Cargo.toml
2024/day05/src/: lib.rs  main.rs
2024/day06/src/: lib.rs  main.rs
2024/day07/src/: lib.rs  main.rs
2024/day08/src/: lib.rs  main.rs
day01/src/: lib.rs  main.rs
day02/src/: lib.rs  main.rs
day03/src/: main.rs
templates/day_template/: Cargo.toml
templates/day_template/src/: lib.rs  main.rs
