[workspace]
members = [
    "day01",
    "day02",
    "day03",
    # Add new days as they are created
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Chukwuma Akunyili"]
repository = "https://github.com/aguluman/advent-of-code-2024-rust" 
license = "MIT"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

# For benchmarks
[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
