[workspace]
members = [
    "2024/day01",
    "2024/day02",
    "2024/day03",
    "2024/day04",
    "2024/day05",
    "2024/day06",
    "2024/day07",
    "2024/day08",
    # Add new days as they are created
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Chukwuma Akunyili"]
repository = "https://github.com/aguluman/advent-of-code-rust" 
license = "MIT"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

# For benchmarks
[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
